logs/ktbs.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyLD-0.6.7.egg-info'...
Listing './lib/python3.5/site-packages/WebOb-1.4.egg-info'...
Listing './lib/python3.5/site-packages/fsa4streams'...
Listing './lib/python3.5/site-packages/fsa4streams-0.7a0.egg-info'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.9.egg-info'...
Listing './lib/python3.5/site-packages/isodate'...
Listing './lib/python3.5/site-packages/isodate/tests'...
Listing './lib/python3.5/site-packages/isodate-0.6.0.dist-info'...
Listing './lib/python3.5/site-packages/kTBS-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/ktbs'...
Listing './lib/python3.5/site-packages/ktbs/api'...
Listing './lib/python3.5/site-packages/ktbs/engine'...
Compiling './lib/python3.5/site-packages/ktbs/engine/trace.py'...
***   File "./lib/python3.5/site-packages/ktbs/engine/trace.py", line 483
    except BaseException, ex:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ktbs/engine/trace_obsels.py'...
***   File "./lib/python3.5/site-packages/ktbs/engine/trace_obsels.py", line 295
    except TypeError, AttributeError:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ktbs/methods'...
Compiling './lib/python3.5/site-packages/ktbs/methods/fsa.py'...
***   File "./lib/python3.5/site-packages/ktbs/methods/fsa.py", line 188
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ktbs/methods/sparql.py'...
***   File "./lib/python3.5/site-packages/ktbs/methods/sparql.py", line 86
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ktbs/namespace.py'...
***   File "./lib/python3.5/site-packages/ktbs/namespace.py", line 550
    print KTBS_NS_TTL
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ktbs/plugins'...
Compiling './lib/python3.5/site-packages/ktbs/plugins/activitystreams.py'...
***   File "./lib/python3.5/site-packages/ktbs/plugins/activitystreams.py", line 656
    print g.serialize(format="n3")
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ktbs/plugins/authx.py'...
***   File "./lib/python3.5/site-packages/ktbs/plugins/authx.py", line 291
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ktbs/plugins/inspector.py'...
***   File "./lib/python3.5/site-packages/ktbs/plugins/inspector.py", line 35
    if code.co_filename
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ktbs/plugins/meth_external.py'...
***   File "./lib/python3.5/site-packages/ktbs/plugins/meth_external.py", line 118
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ktbs/plugins/meth_feed.py'...
***   File "./lib/python3.5/site-packages/ktbs/plugins/meth_feed.py", line 252
    print _FeedImportMethod()
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ktbs/plugins/simple_model.py'...
***   File "./lib/python3.5/site-packages/ktbs/plugins/simple_model.py", line 201
    print tree.asXML()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ktbs/plugins/sparql_endpoints.py'...
***   File "./lib/python3.5/site-packages/ktbs/plugins/sparql_endpoints.py", line 137
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ktbs/serpar'...
Compiling './lib/python3.5/site-packages/ktbs/serpar/jsonld_parser.py'...
***   File "./lib/python3.5/site-packages/ktbs/serpar/jsonld_parser.py", line 82
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ktbs/serpar/jsonld_serializers.py'...
***   File "./lib/python3.5/site-packages/ktbs/serpar/jsonld_serializers.py", line 73
    print "===", self._base, uri
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ktbs/standalone.py'...
***   File "./lib/python3.5/site-packages/ktbs/standalone.py", line 246
    def __init__(self, (host, port), handler_class):
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/posix_ipc-0.9.8.egg-info'...
Listing './lib/python3.5/site-packages/pyld'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/rdflib'...
Listing './lib/python3.5/site-packages/rdflib/extras'...
Listing './lib/python3.5/site-packages/rdflib/plugins'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyMicrodata'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/extras'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/host'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/rdfs'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/transform'...
Listing './lib/python3.5/site-packages/rdflib/plugins/serializers'...
Listing './lib/python3.5/site-packages/rdflib/plugins/sparql'...
Listing './lib/python3.5/site-packages/rdflib/plugins/sparql/results'...
Listing './lib/python3.5/site-packages/rdflib/plugins/stores'...
Listing './lib/python3.5/site-packages/rdflib/tools'...
Listing './lib/python3.5/site-packages/rdflib-4.1.2.egg-info'...
Listing './lib/python3.5/site-packages/rdfrest'...
Listing './lib/python3.5/site-packages/rdfrest/cores'...
Compiling './lib/python3.5/site-packages/rdfrest/cores/http_client.py'...
***   File "./lib/python3.5/site-packages/rdfrest/cores/http_client.py", line 250
    except ResourceAccessError, ex:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rdfrest/http_server.py'...
***   File "./lib/python3.5/site-packages/rdfrest/http_server.py", line 556
    except HttpException, ex:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rdfrest/serializers'...
Listing './lib/python3.5/site-packages/rdfrest/util'...
Compiling './lib/python3.5/site-packages/rdfrest/util/__init__.py'...
***   File "./lib/python3.5/site-packages/rdfrest/util/__init__.py", line 307
    except BaseException, ex:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rdfrest/util/config.py'...
***   File "./lib/python3.5/site-packages/rdfrest/util/config.py", line 217
    print "Error in kTBS logging configuration, please read the following error message carefully.\n{0}".format(e.message)
                                                                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rdfrest/util/prefix_conjunctive_view.py'...
***   File "./lib/python3.5/site-packages/rdfrest/util/prefix_conjunctive_view.py", line 244
    def triples_choices(self, (s, p, o), context=None):
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/webob'...
Listing './share'...
Listing './share/python-wheels'...
